# PaXer

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  ETHICS.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: config.py  main.py  schemas.py
backend/db/: base.py
backend/models/: imagery.py
backend/routers/: audit_log.py  infer.py  ingest.py  queue.py  verify.py
backend/services/: audit.py  inference.py  store.py
data/: synthetic_generator.py
data/samples/: annotations.json
docker/: nginx.conf
docker/postgres/: init.sql
docs/: ARCHITECTURE.md  ETHICS_BOARD_CHECKLIST.md
frontend/: .env.example  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AuditLogTable.tsx  DiffPanel.tsx  MapView.tsx  NavBar.tsx  SafetyBanner.tsx  TimeSlider.tsx  UploadButton.tsx  VerificationPanel.tsx
frontend/src/hooks/: useAuditLog.ts  useQueue.ts
frontend/src/pages/: AuditPage.tsx  MapPage.tsx  QueuePage.tsx
frontend/src/test/: DiffPanel.test.tsx  NavBar.test.tsx  SafetyBanner.test.tsx  TimeSlider.test.tsx  VerificationPanel.test.tsx  apiClient.test.ts  setup.ts
frontend/src/types/: index.ts
ml/: dataset.py  evaluate.py  model.py  train.py
redteam/: eval.py  perturbations.py  scenarios.py
tests/: test_backend.py  test_dataset.py  test_documentation.py  test_model.py  test_redteam.py  test_synthetic_generator.py
