[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cthmp"
version = "0.1.0"
description = "Conflict Transparency & Humanitarian Monitoring Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.3",
    "torch>=2.2",
    "torchvision>=0.17",
    # Backend
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-anyio>=0.0.0",
    "anyio[trio]>=4.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-Pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "ml*", "backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
